[package]
name = "pi_enum_default_macro"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Provides a declaration macro that implements the Default for enumeration types"
repository = "https://github.com/GaiaWorld/pi_enum_default_macro.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_enum_default", "enum_default"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"